@@ -1,4 +1,4 @@
-Copyright (c) 2007-2009 Gaspard Bucher
+Copyright (c) 2007-2012 Gaspard Bucher
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
