@@ -5,16 +5,27 @@ module Bricks
   module Grid
     module Common
 
-      # Build a tabular content from a node's attribute
       def get_table_from_json(text)
-        if text.blank?
-          table = [{"type"=>"table"},[["[title]"],["value"]]]
-        else
-          table = JSON.parse(text)
+        error = nil
+        if !text.blank?
+          begin
+            table = JSON.parse(text) rescue nil
+          end
+          if table &&
+             table.kind_of?(Array) &&
+             table.size == 2 &&
+             table[0].kind_of?(Hash) &&
+             table[0]['type'] == 'table'
+            # ok
+          else
+            table = nil
+            error = "<span class='unknownLink'>could not build table from text</span>"
+          end
         end
 
-        raise JSON::ParserError unless table.kind_of?(Array) && table.size == 2 && table[0].kind_of?(Hash) && table[0]['type'] == 'table' && table[1].kind_of?(Array)
-        table
+        table ||= [{"type"=>"table"},[]]
+
+        return table, error
       end
 
     end # Common
@@ -32,7 +43,7 @@ module Bricks
 
       # Create a table from an attribute
       def make_table(opts)
-        style, node, attribute, title, table = opts[:style], opts[:node], opts[:attribute], opts[:title], opts[:table]
+        style, node, attribute = opts[:style], opts[:node], opts[:attribute]
         case (style || '').sub('.', '')
         when ">"
           prefix = "<div class='img_right'>"
@@ -48,25 +59,28 @@ module Bricks
           suffix = ''
         end
 
-        table ||= get_table_from_json(node.prop[attribute])
+        table, error = get_table_from_json(node.prop[attribute])
 
-        res = prefix 
+        res = prefix + error.to_s
         if node.can_write?
           res << "<table data-a='node[#{attribute}]' class='grid'>\n<tr>"
         else
           res << "<table><tr>"
         end
 
-        table[1][0].each do |heading|
-          res << "<th>#{ heading }</th>"
-        end
-        res << "</tr>\n"
-        table[1][1..-1].each do |row|
-          res << "<tr>\n"
-          row.each do |td|
-            res << "<td>#{td}</td>\n"
+
+        if table[1][0]
+          table[1][0].each do |heading|
+            res << "<th>#{ heading }</th>"
           end
           res << "</tr>\n"
+          table[1][1..-1].each do |row|
+            res << "<tr>\n"
+            row.each do |td|
+              res << "<td>#{td}</td>\n"
+            end
+            res << "</tr>\n"
+          end
         end
         res << "</table>\n"
         res << suffix
